# murmur

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy-pages.yml  desktop-release.yml
docs/: ARCHITECTURE.md  DEPLOY.md  DESIGN-LANGUAGE.md  FORK-PLAN.md  PHASE-0-FINDINGS.md  PQ-INTEGRATION.md  ROADMAP.md
murmur-crypto/: Cargo.toml
murmur-crypto/src/: lib.rs
murmur-crypto/tests/: account_api.rs  group_api.rs  spike_a_two_member_group.rs  spike_b_custom_provider.rs
murmur-desktop/: package-lock.json  package.json
murmur-desktop/src-tauri/: Cargo.toml  tauri.conf.json
murmur-desktop/src-tauri/src/: main.rs
murmur-pq/: Cargo.toml
murmur-pq/src/: hpke.rs  lib.rs
murmur-pq/tests/: hpke.rs  hybrid_kem.rs
murmur-server/: Cargo.toml  Dockerfile
murmur-server/src/: lib.rs  main.rs
murmur-server/tests/: relay.rs
murmur-uniffi-spike/: Cargo.toml
murmur-uniffi-spike/src/: lib.rs
murmur-wasm/: Cargo.toml  test_e2e_relay.js  test_node.js
murmur-wasm/src/: lib.rs
murmur-web/: gen-brand.cjs  gen-icons.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
murmur-web/src/: App.tsx
murmur-web/src/crypto/: murmur_wasm.d.ts  murmur_wasm.js  murmur_wasm_bg.wasm  murmur_wasm_bg.wasm.d.ts
murmur-web/src/lib/: murmur.ts  relay.ts
murmur-web/src/styles/: app.css  tokens.css
